--- a/css/carousel.css
+++ b/css/carousel.css
@@ -43,6 +43,10 @@ body {
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
   z-index: 10;
+  background-color: rgba(0,0,0,0.5);
+  padding: 0 20px;
+  border-radius: 20px;
+  margin-bottom: 80px;
 }
 
 /* Declare heights because of positioning of img element */
@@ -55,7 +59,16 @@ body {
   top: 0;
   left: 0;
   min-width: 100%;
-  height: 500px;
+  height: auto;
+}
+
+@media (max-width: 768px) {
+  .carousel-inner > .item > img {
+    min-height: 100%;
+    left:auto;
+    right:0;
+    min-width: 768px;
+  }
 }
 
 
